add pre(namesapce) and suffix(env) to deployment

--- a/kustomization-overlay-env-tmpl.yaml
+++ b/kustomization-overlay-env-tmpl.yaml
@@ -15,5 +15,8 @@ configMapGenerator:
     envs:
       - ${APP_NAME}-config-${ENV}.env
 
-patchesStrategicMerge:
+namePrefix: ${NAMESPACE}-
+nameSuffix: -${ENV}
+
+patches:
   - patch.yaml
