--- a/argocd-root-tmpl.yaml
+++ b/argocd-root-tmpl.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: ${CFG_REPO_URL}
-    targetRevision: HEAD
+    targetRevision: main
     path: argocd/${ENV} # Watches a specific env folder
   destination:
     server: https://kubernetes.default.svc
