--- a/externalsecret-tmpl.yaml
+++ b/externalsecret-tmpl.yaml
@@ -1,14 +1,14 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: ${APP_NAME}-${ENV}-vault
+  name: ${APP_NAME}-vault
 spec:
   refreshInterval: 1h
   secretStoreRef:
     name: vault-backend
     kind: ClusterSecretStore
   target:
-    name: ${APP_NAME}-${ENV}-vault
+    name: ${APP_NAME}-vault
     creationPolicy: Owner
   dataFrom:
     - extract:
