--- a/argocd-child-tmpl.yaml
+++ b/argocd-child-tmpl.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: ${CFG_REPO_URL}
     targetRevision: main
-    path: ${APP_NAME}/overlays/${ENV}
+    path: kustomize/${APP_NAME}/overlays/${ENV}
   destination:
     server: https://kubernetes.default.svc
     namespace: ${NAMESPACE}
